[gd_scene load_steps=10 format=2]

[ext_resource path="res://PowerUps/Scripts/Decoy.gd" type="Script" id=1]
[ext_resource path="res://Player/Model/PlayerTop.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Materials/DecoyMaterial.tres" type="Material" id=3]
[ext_resource path="res://Player/Model/PlayerBottom.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Enemy/Scripts/Engine.gd" type="Script" id=5]
[ext_resource path="res://PowerUps/Explosion.gd" type="Script" id=6]
[ext_resource path="res://PowerUps/EffectParent.gd" type="Script" id=7]
[ext_resource path="res://VFX/Environment/Explosion_v1.tscn" type="PackedScene" id=8]

[sub_resource type="SphereShape" id=1]

radius = 10.0

[node name="Decoy" type="Area"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Transform", "Visibility" ]
speed = 15.0
attractRange = 20.0
explosionRange = 10
explosionDamage = 500
lifeTime = 3.0

[node name="Top" type="MeshInstance" parent="." index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = ExtResource( 3 )
material/1 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="Bottom" type="MeshInstance" parent="." index="1"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = ExtResource( 3 )
material/1 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="Engine" type="Spatial" parent="." index="2"]

script = ExtResource( 5 )

[node name="Explosion" type="Node" parent="." index="3"]

script = ExtResource( 6 )

[node name="AttractCollision" type="CollisionShape" parent="." index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.598809, 0 )
shape = SubResource( 1 )
disabled = false

[node name="LifeTime" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="EffectParent" type="Spatial" parent="." index="6"]

script = ExtResource( 7 )
ignoreAudio = false

[node name="ExplosionEffect" parent="EffectParent" index="0" instance=ExtResource( 8 )]

_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="LifeTime" to="." method="onLifeTimeTimeout"]


